Add cache for PDF files
* PDFs are created when outdated, or taken from cache
* ReportSheetCache added as scoped service
* _Layout extended to render a section with meta tags if needed
* Match.Results has "noFollow" meta tag for robots
* Match.Fixtures has "noFollow" meta tag for robots
* Add unit tests for PDF caching

--- a/League/Views/Shared/_Layout.cshtml
+++ b/League/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0" />
+    @await RenderSectionAsync("meta", required: false)
     <title>@ViewData["Title"]</title>
     @if (ViewData.Description() != null)
     {
