--- a/League/Views/Team/_ChangeVenueModalPartial.cshtml
+++ b/League/Views/Team/_ChangeVenueModalPartial.cshtml
@@ -2,6 +2,7 @@
 @using Microsoft.AspNetCore.Mvc.Localization
 @using TournamentManager.MultiTenancy
 @using TournamentManager.DAL.TypedViewClasses
+@using League.MultiTenancy @* don't remove *@
 
 @inject IViewLocalizer Localizer
 @inject ITenantContext TenantContext
