--- a/League/Views/Ranking/Table.cshtml
+++ b/League/Views/Ranking/Table.cshtml
@@ -21,7 +21,10 @@
     }
 
     var activeRoundId = Model.ActiveRoundId ?? 0;
-    var rounds = Model.RankingList.GroupBy(m => m.RoundName, (key, m) => new { RoundName = key, RoundId = m.First().RoundId, RoundDescription = m.First().RoundDescription, RoundTypeDescription = m.First().RoundTypeDescription }).ToList();
+    var rounds = Model.RankingList
+        .GroupBy(m => m.RoundName, (key, m) => new { RoundName = key, RoundId = m.First()
+            .RoundId, RoundDescription = m.First().RoundDescription, RoundTypeDescription = m.First().RoundTypeDescription })
+            .OrderBy(m => m.RoundName).ToList();
     var useRecentRoundCookie = !(Model.ActiveRoundId.HasValue && rounds.Any(r => r.RoundId == Model.ActiveRoundId));
     if (useRecentRoundCookie) { activeRoundId = rounds.FirstOrDefault()?.RoundId ?? 0; }
 }
