Remove npm package `bootstrap-select'
* The `bootstrap-select' project at https://github.com/snapappointments/bootstrap-select/ is dead
* Update Bootstrap from v4.5.0 to v4.6.2
* Replace with a regular <select> HTML element with bootstrap classes

`SiteScriptTagHelper` - changed behavior:
If `OnContentLoaded` is set, it checks for `document.readState != 'loading'`.
When not 'loading', the callback is invoked directly, otherwise the callback will be called on `document.DOMContentLoaded`

`RoundSelector` and `TeamEditor` components:
SiteScriptTagHelper.Inline is set to false. This goes together with the changed behavior of `SiteScriptTagHelper` (see above)

--- a/League/Views/Shared/Components/RoundSelector/Default.cshtml
+++ b/League/Views/Shared/Components/RoundSelector/Default.cshtml
@@ -11,16 +11,16 @@
         @if (Model.ShowSelector)
         {
             <label asp-for="SelectedRoundId" class="mt-0"></label>
-            <select asp-for="SelectedRoundId" class="form-control d-block col-7 selectpicker show-tick" data-show-subtext="true" data-size="auto" title="@Localizer["Please select a round"]..." data-width="fit">
+            <select asp-for="SelectedRoundId" class="form-control d-block col-7" style="min-width: max-content !important" title="@Localizer["Please select a round"]...">
                 @foreach (var rwt in Model.RoundWithTypeList)
                 {
                     if (rwt.Id == Model.SelectedRoundId)
                     {
-                        <option value="@rwt.Id" selected="selected" data-subtext="&nbsp;&nbsp;@rwt.RoundType.Description">@rwt.Description</option>
+                        <option value="@rwt.Id" selected="selected">@rwt.Description&nbsp;&nbsp;(@rwt.RoundType.Description)</option>
                     }
                     else
                     {
-                        <option value="@rwt.Id" data-subtext="&nbsp;&nbsp;@rwt.RoundType.Description">@rwt.Description</option>
+                        <option value="@rwt.Id">@rwt.Description&nbsp;&nbsp;(@rwt.RoundType.Description)</option>
                     }
                 }
                 @if (Model.RoundNotSpecifiedKey.HasValue)
