--- a/League/Views/TeamApplication/EditTeam.cshtml
+++ b/League/Views/TeamApplication/EditTeam.cshtml
@@ -63,7 +63,7 @@
     <script type="text/javascript" src="~/lib/tempusdominus-bootstrap-4/tempusdominus-bootstrap-4.min.js"></script>
     <partial name="@nameof(League.Views.ViewNames.Shared._DateTimePickerScriptPartial)" />
     <script type="text/javascript" site-on-content-loaded="true">
-        @* Focus the 'Round.SelectedRoundId' selectpicker button *@
+        @* Focus the 'Round.SelectedRoundId' button *@
         @{
             if (Model.Round?.SelectedRoundId != null)
             {
