--- a/League/Views/Role/_AddMemberModalPartial.cshtml
+++ b/League/Views/Role/_AddMemberModalPartial.cshtml
@@ -27,7 +27,7 @@
             <div class="row">
                 <div class="form-group col-12">
                     <label asp-for="ClaimType" class="mt-0"></label>
-                    <select asp-for="ClaimType" class="form-control d-block col-6 selectpicker show-tick" data-size="7" title="@(_AddMemberModalPartial.Please_select)..." data-width="fit">
+                    <select asp-for="ClaimType" class="form-control d-block col-6" title="@(_AddMemberModalPartial.Please_select)...">
                         @foreach (var rn in selectableRoleNames)
                         {
                             <option value="@rn">@_AddMemberModalPartial.ResourceManager.GetString(rn)</option>
@@ -39,9 +39,6 @@
     </modal-body>
     <modal-footer show-dismiss="true" dismiss-text="@_AddMemberModalPartial.Cancel">
         <button site-ajax-submit class="btn btn-primary">@_AddMemberModalPartial.Add</button>
-        <script type="text/javascript" site-on-content-loaded="true" site-on-modal-shown="true" site-inline="true">
-            $('select').selectpicker();
-        </script>
         @{ if (ViewContext.ClientValidationEnabled)
             {
                 /* register the modal form for validation */
