Remove jQuery based client validation
Reasoning: Bootstrap 5 and other packages move from jQuery to plain vanilla javascript. Asp.Net 7 templates come with jQuery included.

* Set `MvcViewOptions.HtmlHelperOptions.ClientValidationEnabled = false` globally in Starup
* Remove npm packages jquery-validation and jquery-validation-unobtrusive
* Remove individual setting for `ViewContext.ClientValidationEnabled` in views

--- a/League/Views/Contact/Index.cshtml
+++ b/League/Views/Contact/Index.cshtml
@@ -80,8 +80,4 @@
         </div>
     </form>
 </div>
-@section Scripts {
-    @{
-        await Html.RenderPartialAsync(League.Views.ViewNames.Shared._ValidationScriptsPartial);
-    }
-}
+@section Scripts {}
