--- a/League/Views/Venue/EditVenue.cshtml
+++ b/League/Views/Venue/EditVenue.cshtml
@@ -6,8 +6,7 @@
 @inject IViewLocalizer Localizer
 @inject ITenantContext TenantContext
 @model League.Models.VenueViewModels.VenueEditModel
-@{ ViewContext.ClientValidationEnabled = false;
-    ViewData["Title"] = (Model.Venue.IsNew ? Localizer["Create venue"].Value : Localizer["Edit venue"].Value);
+@{  ViewData["Title"] = (Model.Venue.IsNew ? Localizer["Create venue"].Value : Localizer["Edit venue"].Value);
     var tenantUrlSegment = TenantContext.SiteContext.UrlSegmentValue;
 }
 <div class="mb-0 pb-1">
