--- a/League/Views/Account/ExternalSignInConfirmation.cshtml
+++ b/League/Views/Account/ExternalSignInConfirmation.cshtml
@@ -66,6 +66,4 @@
         <button type="submit" class="btn btn-lg btn-primary col-10">@Localizer["Associate account"]</button>
     </div>
 </form>
-@section Scripts {
-    @{ await Html.RenderPartialAsync(League.Views.ViewNames.Shared._ValidationScriptsPartial); }
-}
+@section Scripts {}
