--- a/League/Views/Role/_RemoveMemberModalPartial.cshtml
+++ b/League/Views/Role/_RemoveMemberModalPartial.cshtml
@@ -5,7 +5,7 @@
 @inject IViewLocalizer Localizer
 @inject ITenantContext TenantContext
 @model League.Models.RoleViewModels.RoleRemoveModel
-@{ ViewContext.ClientValidationEnabled = false; var tenantUrlSegment = TenantContext.SiteContext.UrlSegmentValue;}
+@{ var tenantUrlSegment = TenantContext.SiteContext.UrlSegmentValue;}
 <!-- Modal -->
 <modal id="edit-team" title="@_RemoveMemberModalPartial.Remove_team_member" dialog-class="modal-md" tabindex="-1">
     <modal-body>
